# dsit-taxonomies

./: README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_annotation_gtr.yml  parameters_data_collection_gtr.yml  parameters_global.yml
src/dsit_taxonomy/: __init__.py  __main__.py  settings.py
src/dsit_taxonomy/pipelines/data_annotation_gtr/: __init__.py  nodes.py  pipeline.py  utils.py
src/dsit_taxonomy/pipelines/data_collection_gtr/: nodes.py  pipeline.py
tests/pipelines/data_collection_gtr/: test_pipeline.py
